--- a/ASI.Basecode.WebApp/Views/Shared/_Header.cshtml
+++ b/ASI.Basecode.WebApp/Views/Shared/_Header.cshtml
@@ -13,6 +13,9 @@
         <ul style="display:inline-block">
             <a  asp-action="Test2" asp-controller="Home">Test 2</a>
         </ul>
+        <ul>
+            <a asp-action="Aguilar" asp-controller="Home">Aguilar</a>
+        </ul>
     </div>
     <div class="logosec">
         @HttpContextAccessor.HttpContext.Session.GetString("UserName")
