--- a/ASI.Basecode.WebApp/wwwroot/css/style.css
+++ b/ASI.Basecode.WebApp/wwwroot/css/style.css
@@ -374,3 +374,68 @@ header {
 #header-menu ul {
     margin: 0px !important;
 }
+
+/* Added css */
+
+/* Rainbow Text Animation */
+.rainbow-text {
+    font-family: arial black;
+    font-size: 80px;
+    font-weight: bold;
+    background-image: linear-gradient(to right, red,orange,yellow,green,blue,indigo,violet);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: move 35s linear infinite;
+
+}
+@keyframes move {
+    to {
+        background-position: 4500vh;
+    }
+}
+
+/* Beating Text Animation */
+.beating-text {
+    font-size: 30px;
+    color: #e00;
+    animation: beat .50s infinite alternate;
+    transform-origin: center;
+}
+@keyframes beat {
+    to {
+        transform: scale(1.4);
+    }
+}
+
+/* Coin Button */
+.coinBtn {
+    border: none;
+    background-color: transparent;
+}
+.coinBtn:focus {
+    outline: none;
+    box-shadow: none;
+}
+
+/* Coin Modal */
+.coinModal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.coinModal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 30px;
+    border: 1px solid #888;
+    width: 50%;
+}
