--- a/ASI.Basecode.WebApp/Views/Home/Aranas.cshtml
+++ b/ASI.Basecode.WebApp/Views/Home/Aranas.cshtml
@@ -30,4 +30,5 @@
         </form>
     </div>
     @Html.ActionLink("Return to main", "Index", "Home")
+    <p id="disclaimer">This website is intended for entertainment purposes only. All information and content provided on this website is satirical and should not be taken seriously. We do not promote or condone gambling in any form. If you have a gambling problem, please seek help from a professional organization.</p>
 </div>
