--- a/ASI.Basecode.WebApp/Views/Shared/_Header.cshtml
+++ b/ASI.Basecode.WebApp/Views/Shared/_Header.cshtml
@@ -13,7 +13,7 @@
         <ul style="display:inline-block">
             <a  asp-action="Test2" asp-controller="Home">Test 2</a>
         </ul>
-        <ul>
+        <ul style="display:inline-block">
             <a asp-action="Aguilar" asp-controller="Home">Aguilar</a>
         </ul>
     </div>
