--- a/ASI.Basecode.WebApp/wwwroot/css/style.css
+++ b/ASI.Basecode.WebApp/wwwroot/css/style.css
@@ -433,9 +433,10 @@ header {
 
 /* Modal Content */
 .coinModal-content {
+    position: center;
     background-color: #fefefe;
     margin: auto;
     padding: 30px;
     border: 1px solid #888;
-    width: 50%;
+    width: 40%;
 }
